--- a/app/views/users/_search.html.erb
+++ b/app/views/users/_search.html.erb
@@ -24,14 +24,13 @@
 <!-- Username TextBox with Search button and a Advanced Search with text based on its' state: toggled on or off -->
 
 <div style="margin: 8px auto; display: grid; grid-template-columns: repeat(3, auto) 1fr; grid-gap: 8px; align-items: center">
-  <%= label_tag :search_usrid, 'UserID: ' %><%= text_field_tag(:search_usrid,params[:search_usrid], class:'form-control', placeholder: 'Search UserID...') %>
-  <button type="submit" class="btn btn-primary">Search</button>
+  <%= label_tag :search_name, 'UserID:' %><%= text_field_tag(:search_name,params[:search_name]) %>
+  <%= submit_tag("Search") %>
   <a id="search_toggle_button"></a>
 </div>
 
 <!-- Name and Email TextBoxes to be displayed on tap of Advanced Search button -->
-
-<div id="advance_search_form" style="margin: 8px auto; display: grid; grid-template-columns: repeat(4, auto) 1fr; grid-gap: 8px; align-items: center">
-  <%= label_tag :search_full_name, 'Name: ' %><%= text_field_tag(:search_fname,params[:search_fname], class:'form-control', placeholder: 'Search Name...') %>
-  <%= label_tag :search_email, 'Email: ' %><%= text_field_tag(:search_email,params[:search_email], class:'form-control', placeholder: 'Search E-mail...') %>
+<div id="advance_search_form" style="margin-bottom: 8px; display: grid; grid-template-columns: repeat(4, auto) 1fr; grid-gap: 8px; align-items: center">
+  <%= label_tag :search_full_name, 'Full Name: ' %><%= text_field_tag(:search_fname,params[:search_fname]) %>
+  <%= label_tag :search_email, 'Email: ' %><%= text_field_tag(:search_email,params[:search_email]) %>
 </div> 
